# bin2cpp

./: CMakeLists.txt
src/: CMakeLists.txt  formatter.hpp  main.cpp
src/formatter/: interface.hpp  to_std_array.hpp  to_std_string_view.hpp
